# django-get-once

./: .pre-commit-config.yaml  README.md  pyproject.toml  test-requirements.txt
.github/workflows/: testing.yml
get_once/: mixins.py
testing/: models.py  serializers.py  urls.py  views.py
testing/migrations/: 0001_initial.py
tests/: settings.py  test_mixin.py
